# Desempenho

./: .gitignore  README.md
Desempenho Curvas/: Run_22x8_MN7005.txt  turn_rate_diagram.py
Ensaio de Atrito/: ensaio_atrito.csv  teste_plano_inclinado.md  tratamento_conservacao.py  tratamento_plano_inclinado.py
Ensaio de Atrito/Aceleracao/: calculo_acc.py  tratamento_acc.py
Ensaio de Atrito/CSV acelerometro/: atrito_70_50.csv  atrito_80_60.csv  atrito_90_70.csv
Processo Trainee/: pyproject.toml
Processo Trainee/Dados GMP/: 16x8E_4043.txt  19x12E_3007.txt  20x10E_4025.txt
Processo Trainee/Scripts/: 1.drag_function.py  2.dinamic_traction.py  3.power_plot.py  4.max_speed.py  5.climb_rate.py  6.stall_ascend_ceiling.py  7.takeoff.py  8.landing.py
